[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SWE_Solver"
version = "0.1.4"
authors = [
  { name="Daniel Cortild", email="d.cortild@rug.nl" },
]
description = "A small package including a one-dimensional well-balanced Shallow Water Equations solver."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DanielCortild/SWE-Solver"
"Bug Tracker" = "https://github.com/DanielCortild/SWE-Solver/issues"

[options]
install_requires = [
    'scipy',
    'numpy',
    'matplotlib',
    'tqdm'
  ]